@@ -313,7 +313,7 @@ static int	file_id(int f, int use_ino, zbx_uint64_t *dev, zbx_uint64_t *ino_lo, 
 	int				ret = FAIL;
 	intptr_t			h;	/* file HANDLE */
 	BY_HANDLE_FILE_INFORMATION	hfi;
-	FILE_ID_INFO			fid;
+	ZBX_FILE_ID_INFO		fid;
 
 	if (-1 == (h = _get_osfhandle(f)))
 	{
@@ -343,7 +343,7 @@ static int	file_id(int f, int use_ino, zbx_uint64_t *dev, zbx_uint64_t *ino_lo, 
 	{
 		if (NULL != zbx_GetFileInformationByHandleEx)
 		{
-			if (0 != zbx_GetFileInformationByHandleEx((HANDLE)h, FileIdInfo, &fid, sizeof(fid)))
+			if (0 != zbx_GetFileInformationByHandleEx((HANDLE)h, zbx_FileIdInfo, &fid, sizeof(fid)))
 			{
 				*dev = fid.VolumeSerialNumber;
 				*ino_lo = fid.FileId.LowPart;
